<resources>
    <string name="app_name">OdeToBalloonsTowerDefence</string>
    <string name="playerOneTextbox">Player 1</string>
    <string name="playerTwoTextbox">Player 2</string>
    <string name="startButton">START</string>
    <string name="player1Label">Player 1</string>
    <string name="player1LabelActive"><b>Player 1</b></string>
    <string name="player2Label">Player 2</string>
    <string name="player2LabelActive"><b>Player 2</b></string>
    <string name="player1Name">Jacob</string>
    <string name="player2Name">Jacob</string>
    <string name="player1Score">0</string>
    <string name="player2Score">0</string>
    <string name="tacks">Select Tacks (circle)</string>
    <string name="tackBtn">select tacks</string>
    <string name="bomb">Select Bomb (rectangle)</string>
    <string name="bombBtn">select bomb</string>
    <string name="dart">Select Dart (line)</string>
    <string name="dartBtn">select dart</string>
    <string name="make_move">Make Move</string>
    <string name="roundLabel">Round</string>
    <string name="roundCounterInitialValue">0</string>
    <string name="selectModeBtn">Select Mode</string>
    <string name="howToPlayTitle">How to Play</string>
    <string name="howToBackBtn">Back to Start</string>
    <string name="howToPlayActivityBtn">How To Play</string>
    <string name="howToPlayText">
        1. Create a account.\n
        2. Sign in to your new account. If you are the first player to join you will enter a waiting screen.\n
        3. Enter how many rounds you want the game to go for.\n
        4. The game will auto start when there are two players.\n
        5. Players will take turn trying to hit balloons center using their selected item\n
        \tNote The collection of Rectangle and Line is random!! Do note that random mean you can
            try many times an it may still not collect! keep trying, or use a different
            collection method! Note\n
            \ta. Circle : collects everything that has center within it.\n
            \tb. Rectangle : Has a chance to collect if center within borders,
               but the larger the rectangle area the lower the chance to collect object is, starting at 50%%.\n
            \tNote Rectangle must be draw from the upper left corner to bottom right Note\n
            \tc. Line : Has a 70%% chance of popping balloon if line passes close to center\n
            \tNote Line has a buffer so you do not be directly on it extends out perpendicular to the line Note\n
        6. Game is over when the number of rounds have been reached, or their is no balloons left on screen\n
        7. Start over!
    </string>
    <string name="game_over">Game Over!</string>
    <string name="FinalScoreP2">0</string>
    <string name="p2_name">P2 Name</string>
    <string name="finalScoreP1">0</string>
    <string name="p1_name">P1 Name</string>
    <string name="rounds_5">Rounds: 5</string>
    <string name="rounds">Rounds</string>
    <string name="player_one_s_name">Player one\'s name</string>
    <string name="player_two_s_name">Player two\'s name</string>
    <string name="RoundPickerSpeakableText">Choose number of rounds</string>
    <string name="player_two_s_name2">Player two\'s name</string>
    <string name="player_one_s_name2">Player one\'s name</string>
    <string name="username_hint">email@gmail.com</string>
    <string name="state_failed">Failed to get game state</string>
    <string name="save_failed">Failed to save data to cloud</string>
    <string name="load_failed">Failed to load data from cloud</string>
    <string name="failed_state">Failed to load game state</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="reset_button_text">Reset</string>
    <string name="remember_me">Remember Me</string>
    <string name="screen_name">Screen Name</string>
    <string name="wait_p1">Waiting for player 2</string>
<!--    <string name="end_game">End Game</string>-->
    <string name="how_to_play">How To Play</string>
</resources>