<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_texture"
    tools:context=".EndGameActivity">

    <Button
        android:id="@+id/backtoStartBtn2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#C81818"
        android:fontFamily="@font/luckiest_guy"
        android:onClick="restartGame"
        android:text="@string/howToBackBtn"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/gameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/game_over"
        android:textColor="#5D4037"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player1NameF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/p1_name"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/player1ScoreF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalRoundCnt" />

    <TextView
        android:id="@+id/player2NameF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/p2_name"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1ScoreF" />

    <TextView
        android:id="@+id/player1ScoreF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/finalScoreP1"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/player2NameF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1NameF" />

    <TextView
        android:id="@+id/player2ScoreF"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:text="@string/FinalScoreP2"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/backtoStartBtn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2NameF"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/finalRoundCnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rounds: 5"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameOver" />
</androidx.constraintlayout.widget.ConstraintLayout>